[tool.poetry]
name = "act"
version = "0.1.0"
description = ""
authors = ["yu fujioka <fujiokayu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
toml = "^0.10.2"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
